crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__timestamps_list@after_no_null.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Timestamp(
        TimestampFilter(After 2025-09-23 11:47:00Z),
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                data_type: Timestamp(
                    Nanosecond,
                    None,
                ),
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      PrimitiveArray<Timestamp(ns)>
    [
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T10:47:00,
      2025-09-22T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2025-09-16T11:47:00,
      2024-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T12:47:00,
      2025-09-24T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2025-09-30T11:47:00,
      2026-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2024-09-23T11:47:00,
      2026-09-23T11:47:00,
    ],
    ],
    filtered: ListArray
    [
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2025-09-16T11:47:00,
      2024-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T12:47:00,
      2025-09-24T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2025-09-30T11:47:00,
      2026-09-23T11:47:00,
    ],
      PrimitiveArray<Timestamp(ns)>
    [
      2025-09-23T11:47:00,
      2024-09-23T11:47:00,
      2026-09-23T11:47:00,
    ],
    ],
}
